@@ -15,14 +15,13 @@ import no.vegvesen.ixn.federation.qpid.Queue;
 import no.vegvesen.ixn.federation.repository.ListenerEndpointRepository;
 import no.vegvesen.ixn.federation.service.NeighbourService;
 import no.vegvesen.ixn.federation.ssl.TestSSLProperties;
-import no.vegvesen.ixn.ssl.KeystoreDetails;
-import no.vegvesen.ixn.ssl.KeystoreType;
-import no.vegvesen.ixn.ssl.SSLContextFactory;
+import no.vegvesen.ixn.keys.generator.ClusterKeyGenerator.CaStores;
 import org.assertj.core.util.Sets;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.util.TestPropertyValues;
@@ -33,10 +32,9 @@ import org.testcontainers.containers.output.Slf4jLogConsumer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
-import jakarta.jms.JMSException;
-import javax.naming.NamingException;
 import javax.net.ssl.SSLContext;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -52,23 +50,28 @@ import static org.mockito.Mockito.*;
 public class RoutingConfigurerIT extends QpidDockerBaseIT {
 
 
+	public static final String HOST_NAME = getDockerHost();
+	public static CaStores stores = generateStores(getTargetFolderPathForTestClass(RoutingConfigurerIT.class),"my_ca", HOST_NAME,"routing_configurer","king_gustaf","nordea");
 
-	public static KeysStructure keysStructure = generateKeys(RoutingConfigurerIT.class,"my_ca", "localhost", "routing_configurer", "king_gustaf", "nordea");
 
 	@Container
-	public static final QpidContainer qpidContainer = getQpidTestContainer("qpid", keysStructure,"localhost");
+	public static final QpidContainer qpidContainer = getQpidTestContainer(
+			stores,
+			HOST_NAME,
+			HOST_NAME,
+			Path.of("qpid")
+			);
 
-	@Autowired
+    @Qualifier("getTestSslContext")
+    @Autowired
 	SSLContext sslContext;
 
-	private static Logger logger = LoggerFactory.getLogger(RoutingConfigurerIT.class);
+	private static final Logger logger = LoggerFactory.getLogger(RoutingConfigurerIT.class);
 
 	private final SubscriptionRequest emptySubscriptionRequest = new SubscriptionRequest(emptySet());
 	private final NeighbourCapabilities emptyNeighbourCapabilities = new NeighbourCapabilities(CapabilitiesStatus.UNKNOWN, emptySet());
 
-	private static String AMQPS_URL;
-
-	static class Initializer
+    static class Initializer
 			implements ApplicationContextInitializer<ConfigurableApplicationContext> {
 
 		public void initialize(ConfigurableApplicationContext configurableApplicationContext) {
@@ -77,12 +80,12 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 			String httpUrl = qpidContainer.getHttpUrl();
 			logger.info("server url: " + httpsUrl);
 			logger.info("server url: " + httpUrl);
-			AMQPS_URL = qpidContainer.getAmqpsUrl();
-			TestPropertyValues.of(
+            TestPropertyValues.of(
 					"routing-configurer.baseUrl=" + httpsUrl,
 					"routing-configurer.vhost=localhost",
-					"test.ssl.trust-store=" + keysStructure.getKeysOutputPath().resolve("truststore.jks"),
-					"test.ssl.key-store=" +  keysStructure.getKeysOutputPath().resolve("routing_configurer.p12")
+					"test.ssl.trust-store=" + getTrustStorePath(stores),
+					"test.ssl.key-store=" +  getClientStorePath("routing_configurer",stores.clientStores())
+
 			).applyTo(configurableApplicationContext.getEnvironment());
 		}
 
@@ -275,7 +278,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 						"AND messageType = 'DATEX2' " +
 						"AND originatingCountry = 'SE' " +
 						"AND protocolVersion = '1.0' " +
-						"AND publisherId = 'SE-1234'", NeighbourSubscriptionStatus.REJECTED, "salmon");
+						"AND publisherId = 'SE-1234'", NeighbourSubscriptionStatus.NO_OVERLAP, "salmon");
 
 		//Just to ensure the timestamp is updated by RoutingConfigurer
 		assertThat(s1.getLastUpdatedTimestamp()).isEqualTo(0);
@@ -324,7 +327,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		client.createHeadersExchange("cap-ex34");
 
 		serviceProvider.setCapabilities(new Capabilities(
-				Collections.singleton(cap)
+				singleton(cap)
 		));
 
 		HashSet<NeighbourSubscription> subs = new HashSet<>();
@@ -337,7 +340,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		subs.add(neighbourSub);
 
 		Neighbour toreDownNeighbour = new Neighbour("tore-down-neighbour", emptyNeighbourCapabilities, new NeighbourSubscriptionRequest(subs), emptySubscriptionRequest);
-		when(serviceProviderRouter.findServiceProviders()).thenReturn(Collections.singleton(serviceProvider));
+		when(serviceProviderRouter.findServiceProviders()).thenReturn(singleton(serviceProvider));
 		when(neighbourService.getNodeName()).thenReturn("my-node");
 		when(neighbourService.getMessagePort()).thenReturn("5671");
 		routingConfigurer.setupNeighbourRouting(toreDownNeighbour, client.getQpidDelta());
@@ -773,8 +776,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		ServiceProvider sp = new ServiceProvider("sp");
 		sp.setCapabilities(new Capabilities(singleton(cap)));
 
-		MessageValidatingSelectorCreator creator = new MessageValidatingSelectorCreator();
-		String capabilitySelector = creator.makeSelector(cap);
+		String capabilitySelector = MessageValidatingSelectorCreator.makeSelector(cap);
 
 		String joinedSelector = String.format("(%s) AND (%s)", delivery.getSelector(), capabilitySelector);
 		System.out.println(joinedSelector);
@@ -861,7 +863,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Neighbour myNeighbour = new Neighbour();
 		myNeighbour.setOurRequestedSubscriptions(new SubscriptionRequest(singleton(subscription)));
 
-		when(neighbourService.findAllNeighbours()).thenReturn(Arrays.asList(myNeighbour));
+		when(neighbourService.findAllNeighbours()).thenReturn(List.of(myNeighbour));
 		when(interchangeNodeProperties.getName()).thenReturn("my-node");
 		when(listenerEndpointRepository.save(any())).thenReturn(new ListenerEndpoint());
 		routingConfigurer.setUpSubscriptionExchanges();
@@ -875,12 +877,12 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		String selector = "a=b";
 		Subscription subscription = new Subscription(selector, SubscriptionStatus.CREATED);
 		subscription.setConsumerCommonName("my-node");
-		subscription.setEndpoints(Collections.singleton(new Endpoint("my-source", "my-host", 5671)));
+		subscription.setEndpoints(singleton(new Endpoint("my-source", "my-host", 5671)));
 
 		Neighbour myNeighbour = new Neighbour();
 		myNeighbour.setOurRequestedSubscriptions(new SubscriptionRequest(singleton(subscription)));
 
-		when(neighbourService.findAllNeighbours()).thenReturn(Arrays.asList(myNeighbour));
+		when(neighbourService.findAllNeighbours()).thenReturn(List.of(myNeighbour));
 		when(interchangeNodeProperties.getName()).thenReturn("my-node");
 		when(listenerEndpointRepository.save(any())).thenReturn(new ListenerEndpoint());
 		routingConfigurer.setUpSubscriptionExchanges();
@@ -904,7 +906,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Neighbour myNeighbour = new Neighbour();
 		myNeighbour.setOurRequestedSubscriptions(new SubscriptionRequest(singleton(subscription)));
 
-		when(neighbourService.findAllNeighbours()).thenReturn(Arrays.asList(myNeighbour));
+		when(neighbourService.findAllNeighbours()).thenReturn(List.of(myNeighbour));
 		when(interchangeNodeProperties.getName()).thenReturn("my-node");
 		when(listenerEndpointRepository.save(any())).thenReturn(new ListenerEndpoint());
 		routingConfigurer.setUpSubscriptionExchanges();
@@ -921,7 +923,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		String selector = "a=b";
 		String exchangeName = "subscription-exchange";
 		Subscription subscription = new Subscription(selector, SubscriptionStatus.TEAR_DOWN);
-		subscription.setEndpoints(Collections.singleton(new Endpoint("my-source", "my-host", 5671, new SubscriptionShard(exchangeName))));
+		subscription.setEndpoints(singleton(new Endpoint("my-source", "my-host", 5671, new SubscriptionShard(exchangeName))));
 		subscription.setConsumerCommonName("my-node");
 
 		client.createHeadersExchange(exchangeName);
@@ -929,7 +931,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Neighbour myNeighbour = new Neighbour();
 		myNeighbour.setOurRequestedSubscriptions(new SubscriptionRequest(singleton(subscription)));
 
-		when(neighbourService.findAllNeighbours()).thenReturn(Arrays.asList(myNeighbour));
+		when(neighbourService.findAllNeighbours()).thenReturn(List.of(myNeighbour));
 		when(interchangeNodeProperties.getName()).thenReturn("my-node");
 
 		routingConfigurer.tearDownSubscriptionExchanges();
@@ -965,7 +967,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Neighbour myNeighbour = new Neighbour();
 		myNeighbour.setOurRequestedSubscriptions(new SubscriptionRequest(singleton(subscription)));
 
-		when(neighbourService.findAllNeighbours()).thenReturn(Arrays.asList(myNeighbour));
+		when(neighbourService.findAllNeighbours()).thenReturn(List.of(myNeighbour));
 		when(interchangeNodeProperties.getName()).thenReturn("my-node");
 
 		routingConfigurer.tearDownSubscriptionExchanges();
@@ -981,7 +983,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		client.createHeadersExchange(exchangeName);
 
 		Neighbour myNeighbour = new Neighbour();
-		when(neighbourService.findAllNeighbours()).thenReturn(Arrays.asList(myNeighbour));
+		when(neighbourService.findAllNeighbours()).thenReturn(List.of(myNeighbour));
 		when(interchangeNodeProperties.getName()).thenReturn("my-node");
 
 		routingConfigurer.tearDownSubscriptionExchanges();
@@ -1026,7 +1028,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		String exchangeName = "failed-exchange";
 		Subscription subscription = new Subscription("originatingCountry = 'NO'", SubscriptionStatus.FAILED);
 		Endpoint endpoint = new Endpoint("my-source", "my-host", 5671, new SubscriptionShard(exchangeName));
-		subscription.setEndpoints(Collections.singleton(endpoint));
+		subscription.setEndpoints(singleton(endpoint));
 		subscription.setConsumerCommonName("my-node");
 
 		client.createHeadersExchange(exchangeName);
@@ -1034,7 +1036,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		Neighbour myNeighbour = new Neighbour();
 		myNeighbour.setOurRequestedSubscriptions(new SubscriptionRequest(singleton(subscription)));
 
-		when(neighbourService.findAllNeighbours()).thenReturn(Arrays.asList(myNeighbour));
+		when(neighbourService.findAllNeighbours()).thenReturn(List.of(myNeighbour));
 		when(interchangeNodeProperties.getName()).thenReturn("my-node");
 		when(listenerEndpointRepository.findByTargetAndAndSourceAndNeighbourName(anyString(), anyString(), anyString())).thenReturn(null);
 
@@ -1049,7 +1051,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		String exchangeName = "failed-exchange-with-listener-endpoint";
 		Subscription subscription = new Subscription("originatingCountry = 'NO'", SubscriptionStatus.FAILED);
 		Endpoint endpoint = new Endpoint("my-source", "my-host", 5671, new SubscriptionShard(exchangeName));
-		subscription.setEndpoints(Collections.singleton(endpoint));
+		subscription.setEndpoints(singleton(endpoint));
 		subscription.setConsumerCommonName("my-node");
 
 		client.createHeadersExchange(exchangeName);
@@ -1058,7 +1060,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		myNeighbour.setName("my-neighbour");
 		myNeighbour.setOurRequestedSubscriptions(new SubscriptionRequest(singleton(subscription)));
 
-		when(neighbourService.findAllNeighbours()).thenReturn(Arrays.asList(myNeighbour));
+		when(neighbourService.findAllNeighbours()).thenReturn(List.of(myNeighbour));
 		when(interchangeNodeProperties.getName()).thenReturn("my-node");
 		when(listenerEndpointRepository.findByTargetAndAndSourceAndNeighbourName(exchangeName, "my-source", "my-neighbour"))
 				.thenReturn(new ListenerEndpoint("my-neighbour", "my-source", "my-host", 5672, new Connection(), exchangeName));
@@ -1090,8 +1092,8 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		when(neighbourService.getNodeName()).thenReturn(qpidContainer.getHost());
 		when(neighbourService.getMessagePort()).thenReturn(qpidContainer.getAmqpsPort().toString());
 		routingConfigurer.setUpRegularRouting(
-				Collections.singleton(neighbourSubscription),
-				Collections.singleton(denmCapability),
+				singleton(neighbourSubscription),
+				singleton(denmCapability),
 				"my_Neighbour",
 				client.getQpidDelta()
 		);
@@ -1113,12 +1115,12 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				NeighbourSubscriptionStatus.TEAR_DOWN,
 				neighbourName
 		);
-		subscription.setEndpoints(Collections.singleton(endpoint));
+		subscription.setEndpoints(singleton(endpoint));
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
 				new NeighbourCapabilities(),
 				new NeighbourSubscriptionRequest(
-						Collections.singleton(subscription)
+						singleton(subscription)
 				),
 				new SubscriptionRequest()
 		);
@@ -1149,7 +1151,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"a = b",
 				NeighbourSubscriptionStatus.TEAR_DOWN,
 				neighbourName);
-		subscription.setEndpoints(Collections.singleton(endpoint));
+		subscription.setEndpoints(singleton(endpoint));
 		String nonTeardownQueueName = "non-teardown-queue";
 		NeighbourEndpoint nonTearDownEndpoint = new NeighbourEndpoint(
 				nonTeardownQueueName,
@@ -1160,7 +1162,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"c = d",
 				NeighbourSubscriptionStatus.CREATED,
 				neighbourName);
-		nonTearDownSubscription.setEndpoints(Collections.singleton(nonTearDownEndpoint));
+		nonTearDownSubscription.setEndpoints(singleton(nonTearDownEndpoint));
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
 				new NeighbourCapabilities(),
@@ -1207,13 +1209,13 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"a = b",
 				NeighbourSubscriptionStatus.TEAR_DOWN,
 				neighbourSPName);
-		subscription.setEndpoints(Collections.singleton(endpoint));
+		subscription.setEndpoints(singleton(endpoint));
 		String neighbourName = "redirect-neighbour";
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
 				new NeighbourCapabilities(),
 				new NeighbourSubscriptionRequest(
-						Collections.singleton(subscription)
+						singleton(subscription)
 				),
 				new SubscriptionRequest()
 		);
@@ -1246,7 +1248,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"a = b",
 				NeighbourSubscriptionStatus.TEAR_DOWN,
 				neighbourSPName);
-		subscription.setEndpoints(Collections.singleton(endpoint));
+		subscription.setEndpoints(singleton(endpoint));
 		String nonTeardownQueueName = "non-teardown-redirected-queue";
 		NeighbourEndpoint endpointNonTearDown = new NeighbourEndpoint(
 				nonTeardownQueueName,
@@ -1257,7 +1259,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"c = d",
 				NeighbourSubscriptionStatus.CREATED,
 				neighbourSPName);
-		nonTearDownSubscription.setEndpoints(Collections.singleton(endpointNonTearDown));
+		nonTearDownSubscription.setEndpoints(singleton(endpointNonTearDown));
 		String neighbourName = "redirect-neighbour";
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
@@ -1308,7 +1310,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"a = b",
 				NeighbourSubscriptionStatus.TEAR_DOWN,
 				neighbourSPName);
-		subscription.setEndpoints(Collections.singleton(endpoint));
+		subscription.setEndpoints(singleton(endpoint));
 		String nonTeardownQueueName = "non-teardown-redirected-queue-x";
 		NeighbourEndpoint endpointNonTearDown = new NeighbourEndpoint(
 				nonTeardownQueueName,
@@ -1319,7 +1321,7 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 				"c = d",
 				NeighbourSubscriptionStatus.CREATED,
 				otherNeighbourSPName);
-		nonTearDownSubscription.setEndpoints(Collections.singleton(endpointNonTearDown));
+		nonTearDownSubscription.setEndpoints(singleton(endpointNonTearDown));
 		String neighbourName = "redirect-neighbour-xx";
 		Neighbour neighbour = new Neighbour(
 				neighbourName,
@@ -1358,17 +1360,5 @@ public class RoutingConfigurerIT extends QpidDockerBaseIT {
 		assertThat(client.getQueue(nonTeardownQueue.getName())).isNotNull();
 	}
 
-
-	public void theNodeItselfCanReadFromAnyNeighbourQueue(String neighbourQueue) throws NamingException, JMSException {
-		SSLContext localhostSslContext = setUpTestSslContext("localhost.p12");
-		Sink neighbourSink = new Sink(AMQPS_URL, neighbourQueue, localhostSslContext);
-		neighbourSink.start();
-	}
-
-	public SSLContext setUpTestSslContext(String s) {
-		return SSLContextFactory.sslContextFromKeyAndTrustStores(
-				new KeystoreDetails(keysStructure.getKeysOutputPath().resolve(s).toString(), "password", KeystoreType.PKCS12),
-				new KeystoreDetails(keysStructure.getKeysOutputPath().resolve("truststore.jks").toString(), "password", KeystoreType.JKS));
-	}
 
 }
